--- a/app/src/main/res/navigation/nav_forgot_password.xml
+++ b/app/src/main/res/navigation/nav_forgot_password.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/frgForgotPassword"
-        android:name="com.hygeia.FrgForgotPassword"
+        android:name="com.hygeia.fragments.FrgForgotPassword"
         android:label="frg_forgot_password"
         tools:layout="@layout/frg_forgot_password" >
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/frgResetPassword"
-        android:name="com.hygeia.FrgResetPassword"
+        android:name="com.hygeia.fragments.FrgResetPassword"
         android:label="frg_reset_password"
         tools:layout="@layout/frg_reset_password" />
 </navigation>
