Password regex fixed

--- a/app/src/main/res/layout/frg_create_account_part1.xml
+++ b/app/src/main/res/layout/frg_create_account_part1.xml
@@ -65,7 +65,7 @@
         android:layout_marginStart="8dp"
         android:autofillHints=""
         android:hint="@string/hint_first_name"
-        android:inputType="text"
+        android:inputType="text|textCapSentences"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/cmbGender"
         app:layout_constraintTop_toBottomOf="@+id/titleOnCreateAccountPart1"
@@ -76,7 +76,7 @@
         style="@style/PrimaryTextField"
         android:autofillHints=""
         android:hint="@string/hint_last_name"
-        android:inputType="text"
+        android:inputType="text|textCapSentences"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNewFirstName"
