--- a/app/src/main/res/navigation/nav_forgot_password.xml
+++ b/app/src/main/res/navigation/nav_forgot_password.xml
@@ -9,15 +9,16 @@
         android:id="@+id/frgForgotPassword"
         android:name="com.hygeia.fragments.FrgForgotPassword"
         android:label="frg_forgot_password"
-        tools:layout="@layout/frg_forgot_password" >
-        <action
-            android:id="@+id/ForgotPasswordToResetPassword"
-            app:destination="@id/frgResetPassword"
-            app:enterAnim="@anim/nav_default_enter_anim" />
-    </fragment>
+        tools:layout="@layout/frg_forgot_password" />
+    <fragment
+        android:id="@+id/frgOTP"
+        android:name="com.hygeia.fragments.FrgOTP"
+        android:label="FrgOTP"
+        tools:layout="@layout/frg_otp" />
     <fragment
         android:id="@+id/frgResetPassword"
         android:name="com.hygeia.fragments.FrgResetPassword"
         android:label="frg_reset_password"
         tools:layout="@layout/frg_reset_password" />
+
 </navigation>
