--- a/app/src/main/res/layout/frg_create_account_part2.xml
+++ b/app/src/main/res/layout/frg_create_account_part2.xml
@@ -75,12 +75,12 @@
         style="@style/PrimaryTextField"
         android:autofillHints=""
         android:hint="@string/hint_phone_number"
-        android:inputType="phone"
+        android:inputType="number"
         android:maxLength="11"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lblCreateAccountErrorMsg1"
-        tools:ignore="VisualLintTextFieldSize" />
+        tools:ignore="TextFields,VisualLintTextFieldSize" />
 
     <TextView
         android:id="@+id/lblCreateAccountErrorMsg2"
