--- a/app/src/main/res/layout/frg_create_account_part3.xml
+++ b/app/src/main/res/layout/frg_create_account_part3.xml
@@ -15,12 +15,8 @@
 
     <TextView
         android:id="@+id/lblPgNumCreateAccount2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="28dp"
+        style="@style/PageNumber"
         android:text="@string/pg_num_3"
-        android:textColor="@color/neutral_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,7 +39,6 @@
     <TextView
         android:id="@+id/titleOnCreateAccountPart3.1"
         style="@style/TextBody"
-        android:layout_marginTop="8dp"
         android:text="@string/title_review_gender_and_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -167,7 +162,6 @@
     <Button
         android:id="@+id/btnCreateAccount"
         style="@style/PrimaryButtonLarge"
-        android:layout_marginBottom="32dp"
         android:text="@string/btn_create_my_account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
